@@ -1,3 +1,7 @@
+2007-09-03  Carlos Garnacho  <carlosg@gnome.org>
+
+	* Users/Shells.pm (get): get list of unique elements.
+
 2007-08-29  Markus Kanet  <darkvision@gmx.info>
 
 	* Init/Services.pm: Apply correctly the information for Slackware.
